--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -2,11 +2,14 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    padding: 1.5rem;
 }
-.container-box {
+.box {
     display: flex;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 1rem;
 }
 .container {
     display: flex;
@@ -15,11 +18,12 @@
 }
 .section-container {
     display: flex;
-    align-items: center;
     justify-content: center;
+    gap: 2rem;
 }
 .image {
     border-radius: 8px;
+    margin-bottom: 0.5rem;
 }
 .card {
     display: flex;
@@ -28,30 +32,35 @@
     background: #fff;
     box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
     cursor: pointer;
+    width: 100%;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 .card-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     align-self: stretch;
+    padding: 0.5rem;
 }
-
-.portfolio-link {
-    text-decoration: none;
-    display: flex;
-    border-bottom: 1.33px solid red;
-    font-weight: 600;
+.italic-text {
+    font-style: italic;
 }
-
+.portfolio-text {
+    color: gray;
+    border-bottom: 1px solid red;
+}
 .btn-github {
     color: white;
     background-color: rgb(255, 39, 118);
-    border-radius: none;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     box-shadow: 0 1px 2px 0 rgba(16, 24, 40, 0.95);
+    border-radius: 2px;
+}
+.btn-github:hover {
+    background-color: rgb(255, 89, 150);
 }
