--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -3,7 +3,7 @@
     align-items: center;
     background-color: black;
     justify-content: space-between;
-    position: sticky;
+    position: absolute;
     top: 0;
 }
 
