--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,84 +1,8 @@
 .navbar {
-    display: flex;
-    align-items: center;
-    background-color: black;
-    justify-content: space-between;
-    position: absolute;
-    top: 0;
-}
+    display: flex !important;
+    justify-content: flex-end !important;
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+    border-radius: 3rem !important;
+} 
 
-.active {
-    background-color: aqua;
-}
-
-.title {
-    font-size: 1.5rem;
-    color: white;
-    font-weight: bold;
-    margin: 1rem;
-}
-
-.navbar ul {
-    list-style: none;
-    display: flex;
-}
-
-.navbar li a {
-    color: white;
-    display: block;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    margin: 0.5rem;
-}
-
-.navbar li a:not(.active):hover {
-    background-color: gray;
-}
-
-.menu {
-    display: none;
-    position: absolute;
-    top: 0.75rem;
-    right: 0.5rem;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 2.25rem;
-    height: 2rem;
-}
-
-.menu span {
-    height: 0.4rem;
-    width: 100%;
-    background-color: white;
-    border-radius: 0.2rem;
-}
-
-@media (max-width: 480px) {
-    .menu {
-        display: flex;
-    }
-
-    .navbar {
-        flex-direction: column;
-        align-items: start;
-    }
-
-    .navbar ul {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        margin-bottom: 0.25rem;
-    }
-
-    .navbar ul.open {
-        display: flex;
-    }
-
-    .navbar ul li {
-        width: 100%;
-    }
-
-    .navbar ul li a {
-        margin: 0.25rem 0.5rem;
-    }
-}
