--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,6 +1,9 @@
 .navbar {
     display: flex !important;
-    justify-content: flex-end !important;
+    margin-left: auto !important;
+    width: 25rem !important;
+    margin-top: 1rem !important;
+    margin-right: 1rem !important;
     padding-left: 1rem !important;
     padding-right: 1rem !important;
     border-radius: 3rem !important;
