--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -1,64 +1,12 @@
 .section {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 1.5rem;
 }
-.box {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1rem;
-}
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-.section-container {
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-}
-.image {
-    border-radius: 8px;
-    margin-bottom: 0.5rem;
-}
-.card-content {
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-}
-.italic-text {
-    font-style: italic;
-}
-.portfolio-text {
-    color: gray;
-    border-bottom: 1px solid red;
-    font-weight: bold;
-}
-.portfolio-text:hover {
-    color: black;
-}
-.demo-source {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-}
+
 .btn-github {
-    color: white;
-    background-color: rgb(255, 39, 118);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 1px 2px 0 rgba(16, 24, 40, 0.95);
-    border-radius: 2px;
+    background-color: aqua !important;
+    border-radius: 0 !important;
 }
+
 .btn-github:hover {
-    background-color: rgb(255, 89, 150);
-}
-.title-text {
-    font-size: 18px;
-    font-weight: bold;
+    background-color: rgb(117, 255, 255) !important;
 }
