--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -30,7 +30,7 @@
     margin: auto;
     border-bottom-right-radius: 0.5rem;
     border-bottom-left-radius: 0.5rem;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgb(49, 49, 49);
     flex-direction: column;
 }
 
