--- a/src/components/styles/MiniProjects.css
+++ b/src/components/styles/MiniProjects.css
@@ -25,24 +25,7 @@
     border-radius: 8px;
     margin-bottom: 0.5rem;
 }
-.card {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    background: #fff;
-    box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
-    cursor: pointer;
-    width: 100%;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-.card-content {
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-}
+
 .italic-text {
     font-style: italic;
 }
@@ -60,14 +43,20 @@
     justify-content: space-between;
 }
 .btn-github {
-    color: white;
-    background-color: rgb(255, 39, 118);
+    background-color: aqua !important;
+    border-radius: 0 !important;
+}
+.btn-github:hover {
+    background-color: rgb(117, 255, 255) !important;
+}
+.link {
+    font-size: 18; 
+    font-weight: "bold"; 
+    color: "gray";
+    text-decoration: "none";
+}
+.card-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 1px 2px 0 rgba(16, 24, 40, 0.95);
-    border-radius: 2px;
-}
-.btn-github:hover {
-    background-color: rgb(255, 89, 150);
 }
