--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -7,5 +7,6 @@
     padding-left: 1rem !important;
     padding-right: 1rem !important;
     border-radius: 3rem !important;
+    background-color: rgba(50, 50, 50, 0.5) !important;
 } 
 
