--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -9,15 +9,18 @@
     text-align: center;
     letter-spacing: -2px;
     color: black;
+    font-family: monospace;
 }
 
 .header span {
-    color: #777;
+    color: white !important;
+    font-weight: bold;
 }
 
 .subtitle {
-    font-size: 1.2rem;
-    line-height: 1.5;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1.5rem !important;
 }
 
 .terminal-container {
@@ -30,7 +33,7 @@
     margin: auto;
     border-bottom-right-radius: 0.5rem;
     border-bottom-left-radius: 0.5rem;
-    background-color: rgb(255, 255, 255, 0.2);
+    background-color: rgb(255, 255, 255, 0.7);
     flex-direction: column;
     height: 50vh;
 }
@@ -42,5 +45,7 @@
 }
 
 .glitch {
-    color: red;
+    text-shadow: 
+        0.025em 0 0 #ff00ff,
+        -0.025em 0 0 #00ffff;
 }
