--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -1,14 +1,26 @@
-.header {
-    font-size: 4rem;
-    text-align: center;
-    letter-spacing: -2px;
+.title {
+    font-size: 2.5rem;
+    color: white;
+    font-family: 'Fira Code', Courier, monospace;
 }
 
-.header span {
-    color: #777;
+.title-box {
+    background-color: #00e0e0;
+    width: 15%;
+    height: 1rem;
+    margin-top: -30px;
+    margin-left: 5%;
 }
 
-.subtitle {
-    font-size: 1.2rem;
-    line-height: 1.5;
+.about {
+    color: white !important;
+    font-family: 'Courier New', Courier, monospace;
+    
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
