--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -1,3 +1,5 @@
+@import url(https://cdn.jsdelivr.net/npm/firacode@6.2.0/distr/fira_code.css);
+
 .container {
     display: flex;
     flex-direction: column; 
@@ -9,7 +11,7 @@
     text-align: center;
     letter-spacing: -2px;
     color: black;
-    font-family: monospace;
+    font-family: 'Fira Code', monospace !important;
 }
 
 .header span {
@@ -18,9 +20,10 @@
 }
 
 .subtitle {
-    color: white;
+    color: white !important;
     font-family: 'Courier New', Courier, monospace;
     font-size: 1.5rem !important;
+    margin-top: 1%;
 }
 
 .learn-more {
