--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -1,3 +1,7 @@
+.about-section {
+    margin: 5%;
+}
+
 .title {
     font-size: 2.5rem;
     color: white;
@@ -6,21 +10,23 @@
 
 .title-box {
     background-color: #00e0e0;
-    width: 15%;
+    width: 7%;
     height: 1rem;
     margin-top: -30px;
-    margin-left: 5%;
+    margin-left: 3%;
 }
 
 .about {
-    color: white !important;
+    color: white;
     font-family: 'Courier New', Courier, monospace;
-    
+    width: 40%;
+    font-size: 1.1rem;
+    margin-top: 2%;
 }
 
-.container {
+.about-container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
