--- a/src/components/styles/Education.css
+++ b/src/components/styles/Education.css
@@ -1,11 +1,15 @@
 .education-section {
     background-image: url('src/assets/images/bg1.jpg');
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
     border-radius: 30px;
     margin: auto;
     width: 85%;
     padding: 1%;
     border: 2px solid rgba(255, 255, 255, 0.1);
+    margin-top: 3%;
 }
 
 .education-content {
