--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -5,7 +5,9 @@
     justify-content: space-evenly;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    border-top: 1px solid transparent;
+    border-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.3), white, rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0)); 
+    border-image-slice: 1;
 }
 
 .footer-name {
