--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -1,68 +1,39 @@
-.section {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 1.5rem;
+.projects-section {
+    display: flex; 
+    flex-direction: column; 
+    height: 100vh;
 }
-.box {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1rem;
+
+.back-btn {
+    background-color: blue;
+    color: white;
+    padding: 1rem 0.5;
+    border-radius: 10px;
+    border: none;
+    margin-right: 1rem;
 }
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+
+.next-btn {
+    background-color: blue;
+    color: white;
+    padding: 1rem 0.5;
+    border-radius: 10px;
+    border: none;
 }
-.section-container {
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
+
+.projects-title {
+    font-size: 3rem;
+    color: white;
+    font-family: 'Fira Code', Courier, monospace;
 }
-.image {
-    border-radius: 8px;
-    margin-bottom: 0.5rem;
+
+.project-card {
+    position: absolute;
+    width: 40%;
+    height: fit-content;
+    padding: 1rem;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%);
 }
-.card {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    background: #fff;
-    box-shadow: 0 0 32px 0 rgba(0, 0, 0, 0.15);
-    cursor: pointer;
-    width: 100%;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-.card-content {
-    display: flex;
-    flex-direction: column;
-    padding: 0.5rem;
-}
-.italic-text {
-    font-style: italic;
-}
-.portfolio-text {
-    color: gray;
-    border-bottom: 1px solid red;
-    font-weight: bold;
-}
-.portfolio-text:hover {
-    color: black;
-}
-.demo-source {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-}
-.btn-github {
-    background-color: aqua !important;
-    border-radius: 0 !important;
-}
-.btn-github:hover {
-    background-color: rgb(117, 255, 255) !important;
-}
+
