--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -3,7 +3,7 @@
 }
 
 .title {
-    font-size: 3rem;
+    font-size: 5.5vh;
     color: white;
     font-family: 'Fira Code', Courier, monospace;
 }
@@ -20,7 +20,7 @@
     color: white;
     font-family: 'Courier New', Courier, monospace;
     width: 50%;
-    font-size: 1.5rem;
+    font-size: 3.5vh;
     margin-top: 2%;
 }
 
