--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -2,6 +2,7 @@
     display: flex; 
     flex-direction: column; 
     height: 100vh;
+    margin: 5%;    
 }
 
 .back-btn {
@@ -22,18 +23,37 @@
 }
 
 .projects-title {
-    font-size: 3rem;
+    font-size: 5.5vh;
     color: white;
     font-family: 'Fira Code', Courier, monospace;
 }
 
 .project-card {
     position: absolute;
-    width: 40%;
-    height: fit-content;
+    width: 30%;
     padding: 1rem;
-    top: 50%; 
     left: 50%; 
-    transform: translate(-50%, -50%);
 }
 
+.cards {
+    border-radius: 20px !important;
+    border: none !important;
+    background-image: linear-gradient(135deg, white, #476fff) !important;
+}
+
+.card-btn-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-btn {
+    background-image: linear-gradient(135deg, #5271ff, #3e4eff) !important;
+    border-radius: 30px !important; 
+    padding: 2% 5% !important;
+    border: none !important;
+}
+
+.card-btn:hover {
+    background-color: #3e52ff !important;
+}
