--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -1,32 +1,34 @@
-.about-section {
-    margin: 5%;
-}
+@media screen and (min-width: 600px) {
+    .about-section {
+        margin: 5%;
+    }
 
-.title {
-    font-size: 5.5vh;
-    color: white;
-    font-family: 'Fira Code', Courier, monospace;
-}
+    .title {
+        font-size: 5.5vh;
+        color: white;
+        font-family: 'Fira Code', Courier, monospace;
+    }
 
-.title-box {
-    background-color: #00d6d6;
-    width: 8%;
-    height: 1.5em;
-    margin-top: -35px;
-    margin-left: 5%;
-}
+    .title-box {
+        background-color: #00d6d6;
+        width: 8%;
+        height: 1.5em;
+        margin-top: -35px;
+        margin-left: 5%;
+    }
 
-.about {
-    color: white;
-    font-family: 'Courier New', Courier, monospace;
-    width: 50%;
-    font-size: 3.5vh;
-    margin-top: 2%;
-}
+    .about {
+        color: white;
+        font-family: 'Courier New', Courier, monospace;
+        width: 60%;
+        font-size: 2.5vh;
+        margin-top: 2%;
+    }
 
-.about-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    .about-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
