--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,12 +1,13 @@
-.navbar {
-    display: flex !important;
-    margin-left: auto !important;
-    width: 25rem !important;
-    margin-right: 1rem !important;
-    padding-left: 1rem !important;
-    padding-right: 1rem !important;
-    padding-top: 0% !important;
-    padding-bottom: 0% !important;
-    border-radius: 3rem !important;
-} 
-
+@media screen and (min-width: 600px) {    
+    .navbar {
+        display: flex !important;
+        margin-left: auto !important;
+        width: 25rem !important;
+        margin-right: 1rem !important;
+        padding-left: 1rem !important;
+        padding-right: 1rem !important;
+        padding-top: 0% !important;
+        padding-bottom: 0% !important;
+        border-radius: 3rem !important;
+    } 
+}
