--- a/src/components/styles/Skills.css
+++ b/src/components/styles/Skills.css
@@ -21,7 +21,7 @@
     }
 
     .skills-box {
-        background-color: #00d6d6;
+        background-color: #00c1c1;
         width: 8%;
         height: 1.5em;
         margin-top: -35px;
