--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -10,10 +10,10 @@
     }
 
     .title-box {
-        background-color: #00d6d6;
+        background-color: #00c1c1;
         width: 8%;
         height: 1.5em;
-        margin-top: -35px;
+        margin-top: -33px;
         margin-left: 5%;
     }
 
