--- a/src/components/styles/MiniProjects.css
+++ b/src/components/styles/MiniProjects.css
@@ -2,42 +2,56 @@
     .section {
         display: flex !important; 
         flex-direction: column !important;
-        align-items: center !important;
-        padding: 1.5rem !important;
+        margin: 5% !important;
     }
-    .box {
-        display: flex !important;
-        width: 100% !important;
-        justify-content: space-between !important;
-        align-items: center !important;
-        margin-bottom: 1rem !important;
-    }
-    .btn-github {
-        background-color: aqua !important;
-        border-radius: 0 !important;
-    }
-    .btn-github:hover {
-        background-color: rgb(117, 255, 255) !important;
-    }
-    .cards {
-        display: flex !important;
-        justify-content: center !important;
-        align-items: center !important;
-        width: 100%;
-    }
-    .carousel-image {
-        display: block !important;
-        width: 100% !important;
-        height: auto !important;
-        border-radius: 10px !important;
-    }
-    .custom-carousel {
-        width: 100%; 
-    }
-    .carousel-caption {
-        background-color: rgba(0, 0, 0, 0.7); 
-        border-radius: 10px;
-        padding: 1rem;
+    .mini-title {
+        font-size: 4.5vh;
         color: white;
+        font-family: 'Fira Code', Courier, monospace;
+    }
+    .mini-box {
+        background-color: #00c1c1;
+        width: 10%;
+        height: 1.5em;
+        margin-top: -28px;
+        margin-left: 10%;
+    }
+    .mini-container {
+        display: flex;
+        overflow: hidden;
+        position: relative;
+        width: 100%;
+        justify-content: space-between;
+    }
+    .mini-cards {
+        flex: 0 0 auto;
+        width: 30%;
+        margin: 0 10px;
+        transition: transform 0.5s ease-in-out;
+        background-color: white;
+        border-radius: 20px;
+    }
+    .mini-img {
+        border-radius: 10px;
+    }
+    .mini-container-top {
+        display: flex;
+        flex-direction: row;
+        animation: moveLeft 10s linear infinite;
+    }
+    .mini-container-bottom {
+        display: flex;
+        flex-direction: row;
+        animation: moveRight 10s linear infinite;
+    }
+
+    @keyframes moveLeft {
+        0% {transform: translateX(0);}
+        100% {transform: translateX(-100%);}
+    }
+
+    @keyframes moveRight {
+        0% {transform: translateX(0);}
+        100% {transform: translateX(100%);}
     }
 }
