--- a/src/components/styles/MiniProjects.css
+++ b/src/components/styles/MiniProjects.css
@@ -1,13 +1,16 @@
 @media screen and (min-width: 600px) {    
     .section {
-        display: flex !important; 
-        flex-direction: column !important;
-        margin: 5% !important;
+        display: flex; 
+        flex-direction: column;
+        overflow: hidden;
+        width: 100%;
+        margin-bottom: 5%;
     }
     .mini-title {
         font-size: 4.5vh;
         color: white;
         font-family: 'Fira Code', Courier, monospace;
+        margin-left: 5%;
     }
     .mini-box {
         background-color: #00c1c1;
@@ -16,42 +19,44 @@
         margin-top: -28px;
         margin-left: 10%;
     }
-    .mini-container {
-        display: flex;
-        overflow: hidden;
-        position: relative;
-        width: 100%;
-        justify-content: space-between;
-    }
     .mini-cards {
         flex: 0 0 auto;
-        width: 30%;
-        margin: 0 10px;
-        transition: transform 0.5s ease-in-out;
+        width: 50%;
+        height: 11rem;
+        margin-right: 2%;
         background-color: white;
-        border-radius: 20px;
     }
-    .mini-img {
-        border-radius: 10px;
+    .card-info {
+        background-color: rgba(0, 0, 0, 0.2);
+        padding: 1%;
     }
     .mini-container-top {
+        margin-top: 5%;
         display: flex;
+        margin-bottom: 3rem;
         flex-direction: row;
-        animation: moveLeft 10s linear infinite;
+        animation: moveLeft 20s linear infinite;
     }
     .mini-container-bottom {
         display: flex;
         flex-direction: row;
-        animation: moveRight 10s linear infinite;
+        animation: moveRight 20s linear infinite;
+    }
+    .mini-img {
+        height: 8em;
+    }
+    .mini-container-bottom {
+        display: flex;
+        flex-direction: row;
     }
 
     @keyframes moveLeft {
-        0% {transform: translateX(0);}
-        100% {transform: translateX(-100%);}
+        0% { transform: translateX(2%); }
+        100% { transform: translateX(-100%); }
     }
-
+      
     @keyframes moveRight {
-        0% {transform: translateX(0);}
-        100% {transform: translateX(100%);}
+        100% { transform: translateX(2%); } 
+        0% { transform: translateX(-100%); }
     }
 }
