--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -3,7 +3,7 @@
         display: flex; 
         flex-direction: column; 
         height: 50rem;
-        margin: 5%;  
+        margin: 5% 5% 0;
     }
 
     .back-btn {
@@ -38,6 +38,7 @@
     }
 
     .project-card {
+        margin-top: 5%;
         position: absolute;
         width: 40%;
         padding: 1rem;
