--- a/src/components/styles/MiniProjects.css
+++ b/src/components/styles/MiniProjects.css
@@ -7,28 +7,25 @@
         margin-bottom: 5%;
     }
     .mini-title {
-        font-size: 4.5vh;
-        color: white;
+        font-size: 4vh;
+        color: rgb(190, 190, 190);
         font-family: 'Fira Code', Courier, monospace;
-        margin-left: 5%;
-    }
-    .mini-box {
-        background-color: #00c1c1;
-        width: 10%;
-        height: 1.5em;
-        margin-top: -28px;
-        margin-left: 10%;
+        margin-left: 3%;
     }
     .mini-cards {
         flex: 0 0 auto;
-        width: 50%;
+        width: 60%;
         height: 11rem;
         margin-right: 2%;
         background-color: white;
     }
     .card-info {
+        display: flex;
         background-color: rgba(0, 0, 0, 0.2);
-        padding: 1%;
+        padding: 0.5rem;
+        justify-content: center;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 1.1em;
     }
     .mini-container-top {
         margin-top: 5%;
@@ -40,6 +37,7 @@
     .mini-container-bottom {
         display: flex;
         flex-direction: row;
+        margin-bottom: 3%;
         animation: moveRight 20s linear infinite;
     }
     .mini-img {
@@ -51,12 +49,12 @@
     }
 
     @keyframes moveLeft {
-        0% { transform: translateX(2%); }
+        0% { transform: translateX(0%); }
         100% { transform: translateX(-100%); }
     }
       
     @keyframes moveRight {
-        100% { transform: translateX(2%); } 
+        100% { transform: translateX(0%); } 
         0% { transform: translateX(-100%); }
     }
 }
