--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -31,4 +31,18 @@
         justify-content: space-between;
         align-items: center;
     }
+
+    .about-image-container {
+        width: 40%;
+        animation: image-movement 5s ease-in-out infinite;
+    }
+
+    .about-image {
+        width: 50%;
+    }
+
+    @keyframes image-movement{
+        0%, 100% { transform: translateY(0); }
+        50% { transform: translateY(-10%); }
+    }
 }
