--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -6,23 +6,6 @@
         margin: 5% 5% 0;
     }
 
-    .back-btn {
-        background-color: blue;
-        color: white;
-        padding: 1rem 0.5;
-        border-radius: 10px;
-        border: none;
-        margin-right: 1rem;
-    }
-
-    .next-btn {
-        background-color: blue;
-        color: white;
-        padding: 1rem 0.5;
-        border-radius: 10px;
-        border: none;
-    }
-
     .projects-title {
         font-size: 5.5vh;
         color: white;
@@ -46,9 +29,9 @@
     }
 
     .cards {
-        border-radius: 20px !important;
-        border: none !important;
-        background-image: linear-gradient(135deg, white, #476fff) !important;
+        border-radius: 30px !important;
+        border: 1px solid rgb(122, 122, 122) !important;
+        background-color: black !important;
     }
 
     .card-btn-container {
@@ -58,7 +41,8 @@
     }
 
     .card-btn {
-        background-image: linear-gradient(135deg, #5271ff, #3e4eff) !important;
+        background-image: linear-gradient(135deg, rgb(0, 225, 255), rgb(0, 22, 102)) !important;
+        color: black !important;
         border-radius: 30px !important; 
         padding: 2% 5% !important;
         border: none !important;
