--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -31,7 +31,8 @@
     .cards {
         border-radius: 30px !important;
         border: 1px solid rgb(122, 122, 122) !important;
-        background-color: black !important;
+        background-image: url("src/assets/images/sky.jpg") !important;
+        background-size: cover;
     }
 
     .card-btn-container {
