--- a/src/components/styles/About.css
+++ b/src/components/styles/About.css
@@ -49,8 +49,9 @@
         justify-content: center;
         align-items: center;
         border-radius: 50%;
-        background-image: url("src/assets/images/space.jpg");
+        background-image: url("src/assets/images/galaxy.jpg");
         background-size: cover;
+        background-position: center;
     }
 
     @keyframes image-movement{
