--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -52,6 +52,7 @@
     }
 
     .social-media {
+        position: relative;
         display: flex;
         justify-content: center;
         font-size: 2em;
