--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -10,14 +10,16 @@
         font-size: 5.5vh;
         color: white;
         font-family: 'Fira Code', Courier, monospace;
+        z-index: 5;
     }
 
     .projects-box {
         background-color: #00c1c1;
         width: 10%;
         height: 1.5em;
-        margin-top: -33px;
+        margin-top: 15px;
         margin-left: 6%;
+        position: absolute;
     }
 
     .project-card {
@@ -26,6 +28,25 @@
         width: 40%;
         padding: 1rem;
         left: 50%; 
+    }
+
+    .github-btn {
+        position: relative !important;
+        background-color: transparent !important;
+        border: 3px solid #00fff0 !important;
+        padding: 1em !important;
+        border-radius: 0 !important;
+        clip-path: polygon(10% 0, 90% 0, 100% 10%, 100% 90%, 90% 100%, 10% 100%, 0 90%, 0 9%) !important;
+    }
+
+    .github-btn:hover {
+        border-color: #00c1c1 !important;
+    }
+
+    .title-section {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .cards {
